--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -42,7 +42,8 @@
     "nominatim_1": "La búsqueda de ubicaciones y geocodificación es proporcionada por",
     "nominatim_2": "Sus datos están licenciados bajo la licencia ODbL.",
     "other_attributions": "Atribuciones adicionales se pueden encontrar en el archivo README.",
-    "close": "Cerrar"
+    "close": "Cerrar",
+    "generic_attributions": "Inicie sesión en AdventurElog para ver las atribuciones para integraciones y servicios habilitados."
   },
   "home": {
     "hero_1": "Descubre las Aventuras Más Emocionantes del Mundo",
@@ -315,7 +316,8 @@
     "sun_times": "Sol Times",
     "sunrise": "Amanecer",
     "sunset": "Atardecer",
-    "timed": "Cronometrado"
+    "timed": "Cronometrado",
+    "distance": "Distancia"
   },
   "worldtravel": {
     "all": "Todo",
