--- a/frontend/src/locales/ko.json
+++ b/frontend/src/locales/ko.json
@@ -8,7 +8,8 @@
     "nominatim_2": "데이터는 ODbL 라이선스가 적용됩니다.",
     "oss_attributions": "오픈 소스 속성",
     "other_attributions": "추가 속성은 README 파일에서 찾을 수 있습니다.",
-    "source_code": "소스 코드"
+    "source_code": "소스 코드",
+    "generic_attributions": "Adventurelog에 로그인하여 활성화 된 통합 및 서비스에 대한 속성을보십시오."
   },
   "adventures": {
     "actions": "행동",
@@ -267,7 +268,8 @@
     "sun_times": "태양 시간",
     "sunrise": "해돋이",
     "sunset": "일몰",
-    "timed": "시간이 정해졌습니다"
+    "timed": "시간이 정해졌습니다",
+    "distance": "거리"
   },
   "auth": {
     "both_passwords_required": "두 암호 모두 필요합니다",
