--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -8,7 +8,8 @@
     "nominatim_2": "Deras data är licensierad under ODbL-licensen.",
     "oss_attributions": "Tillskrivningar med öppen källkod",
     "other_attributions": "Ytterligare attributioner finns i README-filen.",
-    "source_code": "Källkod"
+    "source_code": "Källkod",
+    "generic_attributions": "Logga in på AdventureLog för att visa attribut för aktiverade integrationer och tjänster."
   },
   "adventures": {
     "activities": {
@@ -267,7 +268,8 @@
     "sun_times": "Soltider",
     "sunrise": "Soluppgång",
     "sunset": "Solnedgång",
-    "timed": "Tidsinställd"
+    "timed": "Tidsinställd",
+    "distance": "Avstånd"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
