refactor: enhance UI components with improved styling and layout
- Updated CollectionCard, CountryCard, LodgingCard, NoteCard, RegionCard, TransportationCard, UserCard, and ShareModal components for better visual consistency and responsiveness.
- Introduced hover effects and transitions for a more interactive experience.
- Improved accessibility by ensuring proper alt text for images and using semantic HTML elements.
- Refactored date formatting logic into a utility function for reuse across components.
- Added new translations for profile viewing and joined date in the localization files.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -258,6 +258,8 @@
 		"hide": "Hide",
 		"clear_location": "Clear Location",
 		"starting_airport": "Starting Airport",
+		"view_profile": "View Profile",
+		"joined": "Joined",
 		"ending_airport": "Ending Airport",
 		"no_location_found": "No location found",
 		"from": "From",
