feat: add new translations for 'joined' and 'view_profile' in German locale

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -271,7 +271,9 @@
     "timed": "Zeitlich abgestimmt",
     "distance": "Distanz",
     "all_linked_items": "Alle verknüpften Elemente",
-    "itinerary": "Route"
+    "itinerary": "Route",
+    "joined": "Verbunden",
+    "view_profile": "Profil anzeigen"
   },
   "home": {
     "desc_1": "Entdecken, planen und erkunden Sie mühelos",
