--- a/frontend/src/locales/ko.json
+++ b/frontend/src/locales/ko.json
@@ -387,7 +387,15 @@
     "api_key_placeholder": "Immich API 키를 입력하십시오",
     "enable_integration": "통합을 활성화합니다",
     "immich_integration_desc": "Immich Photo Management Server를 연결하십시오",
-    "need_help": "이것을 설정하는 데 도움이 필요하십니까? \n확인하십시오"
+    "need_help": "이것을 설정하는 데 도움이 필요하십니까? \n확인하십시오",
+    "connection_error": "Immich 서버에 연결하는 오류",
+    "copy_locally": "로컬에서 이미지를 복사하십시오",
+    "copy_locally_desc": "오프라인 액세스를 위해 이미지를 서버에 복사하십시오. \n더 많은 디스크 공간을 사용합니다.",
+    "error_saving_image": "오류 저장 이미지",
+    "integration_already_exists": "면역 통합이 이미 존재합니다. \n한 번에 하나만 통합 할 수 있습니다.",
+    "integration_not_found": "Immich 통합을 찾을 수 없습니다. \n새로운 통합을 작성하십시오.",
+    "network_error": "Immich 서버에 연결하는 동안 네트워크 오류. \n연결을 확인하고 다시 시도하십시오.",
+    "validation_error": "면역 통합을 검증하는 동안 오류가 발생했습니다. \n서버 URL 및 API 키를 확인하십시오."
   },
   "map": {
     "add_adventure": "새로운 모험 추가",
@@ -711,5 +719,8 @@
     "type": "유형",
     "villa": "별장",
     "check_out": "체크 아웃"
+  },
+  "google_maps": {
+    "google_maps_integration_desc": "Google지도 계정을 연결하여 고품질 위치 검색 결과 및 권장 사항을 얻으십시오."
   }
 }
